--- a/.github/workflows/ptiny-token-cli.yml
+++ b/.github/workflows/ptiny-token-cli.yml
@@ -12,6 +12,7 @@ jobs:
         steps:
             - uses: jfrog/setup-jfrog-cli@v3
               env:
-                  JF_URL: https://carmittrial1.jfrog.io
+                  JF_URL: https://carmittrial1.jfrog.io/
               with:
                   oidc-provider-name: github-carmit-project-1 
+                  oidc-audience: carmit-project-1
