--- a/.github/workflows/ptiny-token-cli.yml
+++ b/.github/workflows/ptiny-token-cli.yml
@@ -20,15 +20,11 @@ jobs:
               with:
                   oidc-provider-name: github-carmit-project-1
                   
-            - name: Set up Docker Buildx
-              uses: docker/setup-buildx-action@v3
-
-            - name: build and push
+            - name: configure golang repo
               run: |
-                echo "The first tag is ${{ steps.extracted_tag.outputs.first_tag }}"
-                echo "ENV--------"
-                env
-                echo "ENV--------"
-                # Build Docker image               
-                jf docker build -t  carmittrial1.jfrog.io/docker-trial/test-image:1 . --push
-                
+               echo "configure golang repo"
+               jf go-config --repo-resolve=<GO_RESOLVE_REPO> --repo-deploy=golang-remote
+               jf go build --build-name=my-build --build-number=1 
+               jf go-publish v1.0.0 --build-name=my-build --build-number=1
+               jf rt bce my-build 1
+               jf rt bp my-build 1
