--- a/.github/workflows/ptiny-token-cli.yml
+++ b/.github/workflows/ptiny-token-cli.yml
@@ -24,7 +24,7 @@ jobs:
               run: |
                echo "configure golang repo"
                jf config s
-               jf go-config  --server-id-resolve setup-jfrog-cli-server --repo-resolve=golang-remote
+               jf go-config  --server-id-resolve setup-jfrog-cli-server --repo-resolve=golang-remote --repo-deploy=golang-local
             - name: build
               run: |
                echo "build go"
@@ -32,7 +32,7 @@ jobs:
             - name: publish
               run: |
                 echo "publish"
-                jf go-publish golang-local v1.0.0 --build-name=my-build --build-number=1 --server-id setup-jfrog-cli-server
+                jf go-publish v1.0.0 --build-name=my-build --build-number=1 
             - name: build-info
               run: |
                 echo "build-info"
