--- a/.github/workflows/ptiny-token-cli.yml
+++ b/.github/workflows/ptiny-token-cli.yml
@@ -4,7 +4,7 @@ on:
         branches:
             - '*'
 jobs:
-    build-publish-go:
+    build-publish-python:
         permissions:
             contents: read
             id-token: write
@@ -25,6 +25,7 @@ jobs:
                 echo "configure python"
                 python --version
                 pip --version
+                python3 -m pip install --upgrade pip setuptools wheel
                 wheel -h
                 pip show setuptools
                 
