--- a/.github/workflows/ptiny-token-cli.yml
+++ b/.github/workflows/ptiny-token-cli.yml
@@ -36,4 +36,16 @@ jobs:
                 
             - name: build project
               run: |
-              
+                jf pip install -r requirements.txt --build-name=my-pip-build --build-number=1 --module=jfrog-python-example
+            - name: package project
+              run: |
+                python setup.py sdist bdist_wheel
+            - name: publish project
+              run: |
+                jf rt u dist/ pypi/ --build-name=my-pip-build --build-number=1 --module=jfrog-python-example
+            - name: publish build info
+              run: |
+                jf rt bce my-pip-build 1
+                jf rt bp my-pip-build 1
+                
+                
