--- a/.github/workflows/ptiny-token-cli.yml
+++ b/.github/workflows/ptiny-token-cli.yml
@@ -38,7 +38,13 @@ jobs:
                 
             - name: build project
               run: |
+                echo "PWD"
+                pwd
+                echo "ls"
+                ls -ltr 
+                echo "install dependencies"
                 jf pip install -r requirements.txt --build-name=my-pip-build --build-number=1 --module=jfrog-python-example
+                echo "Build"
                 python setup.py sdist bdist_wheel
                 
             - name: publish project
