--- a/.github/workflows/ptiny-token-cli.yml
+++ b/.github/workflows/ptiny-token-cli.yml
@@ -42,6 +42,8 @@ jobs:
                 pwd
                 echo "ls"
                 ls -ltr 
+                echo "ls pythonExample"
+                ls -ltr  pythonExample
                 echo "install dependencies"
                 jf pip install -r requirements.txt --build-name=my-pip-build --build-number=1 --module=jfrog-python-example
                 echo "Build"
