--- a/.github/workflows/ptiny-token-cli.yml
+++ b/.github/workflows/ptiny-token-cli.yml
@@ -56,7 +56,7 @@ jobs:
             - name: publish build info
               run: |
                 jf rt bce my-pip-build 1
-                jf rt bp my-pip-build 1
+                jf rt bp my-pip-build 1  --project carmit-prj-1
                 
                 
                 
