--- a/.github/workflows/ptiny-token-cli.yml
+++ b/.github/workflows/ptiny-token-cli.yml
@@ -32,7 +32,7 @@ jobs:
                 python --version
                 pip --version
                 echo "setup python"                
-                python3 -m pip install --upgrade pip setuptools wheel
+                python3 -m pip install --upgrade pip setuptools wheel sigstore
                 wheel -h
                 pip show setuptools
                 echo $VIRTUAL_ENV
@@ -49,7 +49,8 @@ jobs:
                 jf pip install -r requirements.txt --build-name=my-pip-build --build-number=1 --module=jfrog-python-example
                 echo "Build"
                 python setup.py sdist bdist_wheel
-                
+                cd dist && echo "hashes=$(sha256sum * | base64 -w0)" >> $GITHUB_OUTPUT
+                echo "$GITHUB_OUTPUT"
             - name: publish project
               run: |
                 jf rt u dist/ python-virtual/example-projects/ --build-name=my-pip-build --build-number=1 --module=jfrog-python-example --project carmit-prj-1
