--- a/.github/workflows/scan-pull-request.yml
+++ b/.github/workflows/scan-pull-request.yml
@@ -97,7 +97,7 @@ jobs:
 
           # [Optional, default: "FALSE"]
           # Displays all existing vulnerabilities, including the ones that were added by the pull request.
-          # JF_INCLUDE_ALL_VULNERABILITIES: "TRUE"
+          JF_INCLUDE_ALL_VULNERABILITIES: "TRUE" # to remove to see ALL XXX
 
           # [Optional, default: "FALSE"]
           # When adding new comments on pull requests, keep old comments that were added by previous scans.
