--- a/.github/workflows/frogbot-scan-repo.yml
+++ b/.github/workflows/frogbot-scan-repo.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         # The repository scanning will be triggered periodically on the following branches.
-        branch: ["dev", "frogbot-tests"]
+        branch: ["main"]
     steps:
       - uses: jfrog/frogbot@v2
         env:
