--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -16,7 +16,7 @@ jobs:
             - name: Setup JFrog CLI
               uses: jfrog/setup-jfrog-cli@v4
               env: 
-                JF_URL: ${{ secrets.JF_URL }} 
+                JF_URL: ${{ vars.JF_URL }} 
                 JFROG_CLI_LOG_LEVEL: DEBUG
               with:
                   oidc-provider-name: github-carmit-project-1
