--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -54,6 +54,12 @@ jobs:
             - name: publish project
               run: |
                 jf rt u dist/ python-virtual/example-projects/ --build-name=my-pip-build --build-number=1 --module=jfrog-python-example --project ${{ vars.JF_PROJECT_KEY }} 
+            - name: build docker
+              run: |
+                 docker buildx build .   -t ${{ vars.JF_URL }}/docker-local/carmit-testing:3  -f Dockerfile
+                 jf docker scan ${{ vars.JF_URL }}/docker-local/carmit-testing:3 
+                 jf docker push ${{ vars.JF_URL }}/docker-local/carmit-testing:3 
+                 
             - name: publish build info
               run: |
                 jf rt bce my-pip-build 1
