--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -69,15 +69,19 @@ jobs:
               uses: docker/build-push-action@v5
               id: build
               with:
-                push: true
+                push: false
                 platforms: linux/amd64
                 tags: ${{ vars.JF_URL }}/docker-local/carmit-testing:3
+
+            - name: docker images   
+              run: | 
+                docker images
                 
             - name: docker scan
               env:
                 ACTIONS_STEP_DEBUG: true
                 JFROG_CLI_LOG_LEVEL: 'DEBUG'
-              run: |                
+              run: |                     
                  jf docker scan ${{ vars.JF_URL }}/docker-local/carmit-testing:3
                  
             - name: publish build info
