--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -11,7 +11,7 @@ jobs:
         runs-on: ubuntu-latest
         env:
           DOCKER_REPO: 'docker-local'
-          IMAGE_NAME: 'carmit-testing:3'
+          IMAGE_NAME: 'carmit-testing:4'
         steps:
             - name: Checkout the repository    
               uses: actions/checkout@v4
@@ -81,20 +81,21 @@ jobs:
               run: |  
                  jf docker pull ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
                  jf docker scan ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
-                 echo "metadata: ${{ steps.build.outputs.metadata }}"
-                 echo "imageid:  ${{ steps.build.outputs.imageid }} "
-                 echo "digest: ${{ steps.build.outputs.digest }} "
+                 #echo "metadata: ${{ steps.build.outputs.metadata }}"
+                 #echo "imageid:  ${{ steps.build.outputs.imageid }} "
+                 #echo "digest: ${{ steps.build.outputs.digest }} "
                  
 
             - name: add docker package to build
               run: |  
                  echo "${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}@${{ steps.build.outputs.digest }}" > metadata.json
-                 jf rt build-docker-create ${{ env.DOCKER_REPO }} --image-file metadata.json --build-name my-pip-build --build-number 1
+                 cat metadata.json
+                 jf rt build-docker-create ${{ env.DOCKER_REPO }} --image-file metadata.json --module docker --build-name my-pip-build --build-number 2 --project ${{ vars.JF_PROJECT_KEY }}
                  
             - name: publish build info
               run: |
-                jf rt bce my-pip-build 1
-                jf rt bp my-pip-build 1  --project ${{ vars.JF_PROJECT_KEY }}
+                jf rt bce my-pip-build 2
+                jf rt bp my-pip-build 2  --project ${{ vars.JF_PROJECT_KEY }}
                 
                 
                 
