--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -87,7 +87,7 @@ jobs:
               run: |  
                  echo "${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}@${{ steps.build.outputs.digest }}" > metadata.json
                  cat metadata.json
-                 jf rt build-docker-create ${{ env.DOCKER_REPO }} --image-file metadata.json --module docker --build-name my-pip-build --build-number 2 --project ${{ vars.JF_PROJECT_KEY }}
+                 jf rt build-docker-create ${{ env.DOCKER_REPO }} --image-file metadata.json --build-name my-pip-build --build-number 2 --project ${{ vars.JF_PROJECT_KEY }}
                  
             - name: publish build info
               run: |
