--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -12,6 +12,9 @@ jobs:
         env:
           DOCKER_REPO: 'docker-local'
           IMAGE_NAME: 'carmit-testing:4'
+          BUILD_NUMBER: 3
+          BUILD_NAME: my-testing-build
+          
         steps:
             - name: Checkout the repository    
               uses: actions/checkout@v4
@@ -20,19 +23,15 @@ jobs:
               uses: jfrog/setup-jfrog-cli@v4
               env: 
                 JF_URL: https://${{ vars.JF_URL }}/
-                JFROG_CLI_LOG_LEVEL: DEBUG
               with:
                   oidc-provider-name: github-carmit-project-1
 
             - name: configure jfrog environment
               run: |
-                echo "verify jfrog cli"                
-                jf --version
-                jf pip-config --repo-resolve=python-virtual       
+                jf pip-config --repo-resolve=python-virtual    
+                
             - name: configure environment
               run: |                      
-                python --version
-                pip --version                
                 python3 -m pip install --upgrade pip setuptools wheel sigstore
                 wheel -h
                 pip show setuptools
@@ -40,14 +39,14 @@ jobs:
                 
             - name: build project
               run: |                               
-                jf pip install -r requirements.txt --build-name=my-pip-build --build-number=2 --module=jfrog-python-example
-                echo "Build"
+                jf pip install -r requirements.txt --build-name=${{ env.BUILD_NAME }} --build-number=${{ env.BUILD_NUMBER }}  --module=jfrog-python-example
                 python setup.py sdist bdist_wheel
                 cd dist && echo "hashes=$(sha256sum * | base64 -w0)" >> $GITHUB_OUTPUT
-                echo "$GITHUB_OUTPUT"
+
             - name: publish python package
               run: |
-                jf rt u dist/ python-virtual/example-projects/ --build-name=my-pip-build --build-number=2 --module=jfrog-python-example --project ${{ vars.JF_PROJECT_KEY }} 
+                jf rt u dist/ python-virtual/example-projects/ --build-name=${{ env.BUILD_NAME }}  --build-number=${{ env.BUILD_NUMBER }}  --module=jfrog-python-example --project ${{ vars.JF_PROJECT_KEY }} 
+
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v3    
                 
@@ -65,25 +64,22 @@ jobs:
               with:
                 push: true
                 platforms: linux/amd64, linux/arm64
-                tags: ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
-          
+                tags: ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}          
                 
             - name: docker scan
               run: |  
                  jf docker pull ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
-                 jf docker scan ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}
-                               
+                 jf docker scan ${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}                               
 
             - name: add docker package to build
               run: |  
                  echo "${{ vars.JF_URL }}/${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}@${{ steps.build.outputs.digest }}" > metadata.json
-                 cat metadata.json
-                 jf rt build-docker-create ${{ env.DOCKER_REPO }} --image-file metadata.json --build-name my-pip-build --build-number 2 --project ${{ vars.JF_PROJECT_KEY }}
+                 jf rt build-docker-create ${{ env.DOCKER_REPO }} --image-file metadata.json --build-name my-pip-build --build-number ${{ env.BUILD_NUMBER }} --project ${{ vars.JF_PROJECT_KEY }}
                  
             - name: publish build info
               run: |
-                jf rt bce my-pip-build 2
-                jf rt bp my-pip-build 2  --project ${{ vars.JF_PROJECT_KEY }}
-                
+                jf rt bce ${{ env.BUILD_NAME }}  ${{ env.BUILD_NUMBER }} 
+                jf rt bp ${{ env.BUILD_NAME }}  ${{ env.BUILD_NUMBER }}  --project ${{ vars.JF_PROJECT_KEY }}
+                jf build-scan  --project ${{ vars.JF_PROJECT_KEY }} ${{ env.BUILD_NAME }}  ${{ env.BUILD_NUMBER }} 
                 
                 
