--- a/.github/workflows/frogbot-scan-repo.yml
+++ b/.github/workflows/frogbot-scan-repo.yml
@@ -16,7 +16,8 @@ jobs:
         # The repository scanning will be triggered periodically on the following branches.
         branch: ["main"]
     steps:
-      - uses: carmithersh/frogbot@master
+      - uses: jfrog/frogbot@v2
+       #carmithersh/frogbot@master
         env:
           # [Mandatory]
           # JFrog platform URL
