--- a/.github/workflows/frogbot-scan-repo.yml
+++ b/.github/workflows/frogbot-scan-repo.yml
@@ -25,7 +25,7 @@ jobs:
 
           # [Mandatory if JF_USER and JF_PASSWORD are not provided]
           # JFrog access token with 'read' permissions on Xray service
-          JF_ACCESS_TOKEN: 
+          #JF_ACCESS_TOKEN: 
           OIDC_PROVIDER_NAME: github-carmit-project-1
           #${{ secrets.JF_ACCESS_TOKEN }}
 
