--- a/.github/workflows/frogbot-scan-repo.yml
+++ b/.github/workflows/frogbot-scan-repo.yml
@@ -23,8 +23,7 @@ jobs:
           ACTIONS_STEP_DEBUG: true
           # [Mandatory]
           # JFrog platform URL
-          JF_URL: https://carmittrial.jfrog.io/
-          #${{ vars.JFROG_URL }}
+          JF_URL: ${{ vars.JFROG_URL }}
 
           # [Mandatory if JF_USER and JF_PASSWORD are not provided]
           # JFrog access token with 'read' permissions on Xray service
